--- a/contexmundi.html
+++ b/contexmundi.html
@@ -13,7 +13,11 @@
         <a href="#índice.html" class="btn btn-primary disabled" tabindex="-1" role="button" aria-disabled="true">Inicio</a>
         <a href="#contenidomundi.html" class="btn btn-secondary disabled" tabindex="-1" role="button" aria-disabled="true">¿Qué pasa en el mundo?</a>
 
-        <div class="btn-group" role="group">
+        <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+          <button type="button" class="btn btn-primary">1</button>
+          <button type="button" class="btn btn-primary">2</button>
+        
+          <div class="btn-group" role="group">
             <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
             </button>
@@ -21,5 +25,6 @@
               <li><a class="dropdown-item" href="#">Dropdown link</a></li>
               <li><a class="dropdown-item" href="#">Dropdown link</a></li>
             </ul>
+          </div>
         </div>
     </header>
