--- a/contexmundi.html
+++ b/contexmundi.html
@@ -7,9 +7,49 @@
     <link rel="stylesheet" href="inicio.css">   
 </head>
 <body>
-    <header>
+        <header>
         <h1 class="titulo">Utilizar, Reciclar y vivir más</h1>
         <!--Acá va el menu-->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#¿Qué-pasa-mundo?">Intro</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#recliclaje-menor-escala">Proyectos</a>
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Puntos-verdes">Mapa</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Reciclaje
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="botellas.html">Botellas</a></li>
+                        <li><a class="dropdown-item" href="pilas.html">Pilas</a></li>
+                         <li><a class="dropdown-item" href="telas.html">Telas</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+          <br>
+
+        <div>
+
+        </div>
     </header>
     <nav>
         <iframe width="420" height="315"
