--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
        <div id="recliclaje-menor-escala">
           <h3 class="subtitulo">¿Qué deberíamos hacer para mejorar nuestra situación?</h3>
           <h4>
-              <p>Te invitamos a participar en nuestros proyectos de sostenibilidad y acción ciudadana. Estas iniciativas están diseñadas para que cada individuo pueda aportar su granito de arena y ser parte de un movimiento global para combatir la contaminación y proteger nuestro planeta. <br>
+              <p class="texto">Te invitamos a participar en nuestros proyectos de sostenibilidad y acción ciudadana. Estas iniciativas están diseñadas para que cada individuo pueda aportar su granito de arena y ser parte de un movimiento global para combatir la contaminación y proteger nuestro planeta. <br>
               No importa cuán grande o pequeña sea tu contribución, cada acción cuenta y suma hacia un cambio positivo. Al unirte a nuestras iniciativas, no solo estarás ayudando a mejorar el medio ambiente, sino que también tendrás la oportunidad de aprender, crecer y conectarte con personas que comparten tu pasión por la sostenibilidad. Creemos que juntos podemos lograr un impacto significativo y duradero. <br>
               Explora nuestros proyectos y descubre cómo puedes involucrarte. ¡Sé parte de la solución y ayuda a construir un futuro más verde y sostenible para todos!
               </p>
