--- a/pilas.html
+++ b/pilas.html
@@ -4,24 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reciclaje de Pilas y Baterias</title>
+    <link rel="stylesheet" href="pilas.css">
 </head>
 
 <body>
+
     <header>
-        <h1>¿Qué hacer con las pilas usadas?</h1>
+        <h1 class="titulo">¿Qué hacer con las pilas usadas?</h1>
     </header>
 
     <main>
-        <h3>Las pilas en desuso son residuos solidos urbanos.</h3>
-        <h3>Requieren una recolección diferenciada porque contienen contaminantes para el suelo y el agua.</h3>
-        <h4>En Argentina existe un programa</h4> <a href="https://rippilas.org/inicio/">RIPPilas</a>
-        <h4>Donde participan un conjunto de empresas del sector que se unió para gestionar la recolección y el tratamiento diferenciado de las pilas y baterías portátiles, para así separarlas del resto de los residuos sólidos y apuntar en lo posible a la recuperación de recursos.
-            RIPPilas cuenta con 150 puntos de recolección públicos y desde 2021 Axion Energy se unió como socio estratégico, colocando 22 estaciones como puntos de recolección en la ciudad de Buenos Aires.</h4>
-        
-        <h4>Ademas de las estaciones de servicio, tambien se pueden dejar en los Puntos Verdes</h4>
+        <div class="pilas">
+            <img class="foto-pilas" src="https://okdiario.com/img/2022/10/10/-como-es-el-funcionamiento-de-una-pila_-655x368.jpg" alt="">
 
-        <h2>El comercio de pilas</h2>
-        <h3>La Ciudad de Buenos Aires tiene importadores previstos por la ley 5.991:</h3>
+            <p class="texto-pilas">Las pilas en desuso son residuos solidos urbanos.
+                Estas, requieren de una recolección diferenciada porque contienen contaminantes para el suelo y agua. <br>
+                En Argentina existe un programa <a href="https://rippilas.org/inicio/">(RIPPilas)</a>
+                donde participan un conjunto de empresas del sector que se unieron para gestionar la recolección y el tratamiento diferenciado de las pilas y baterías portátiles, 
+                con el fin de separarlas del resto de los residuos sólidos y apuntar en lo posible a la recuperación de recursos. <br>
+                <a href="https://rippilas.org/inicio/">RIPPilas</a> cuenta con 150 puntos de recolección públicos y desde 2021 <a href="https://www.axionenergy.com/Paginas/index.aspx">Axion Energy</a> se unió como socio estratégico, colocando 22 estaciones como puntos de recolección en la ciudad de Buenos Aires.
+                Ademas de las estaciones de servicio, tambien se pueden dejar las pilas en los Puntos Verdes.
+            </p>
+        </div>
+
+        <h3 class="subtitulo">El comercio de pilas</h3>
+        <p>La Ciudad de Buenos Aires tiene importadores previstos por la <a href="https://defensoria.org.ar/normativas-cdh/ley-n-5991-gestion-ambiental-de-pilas-en-desuso/">ley 5.991</a>
+            (esta norma garantiza Gestión Ambiental de Pilas en Desuso, considerándolas como Residuos Sólidos Urbanos Sujetos a Manejo Especial):</p>
 
         <ul>
             <li>Energizer Argentina S.A.</li>
