--- a/inicio.html
+++ b/inicio.html
@@ -28,16 +28,23 @@
         <!--Esta sería una pequeña intro-->
        <div>
         <h3 class="subtitulo">¿Hasta cuándo vamos a seguir contaminando y destruyendo este planeta?</h3>
-        <h4>
-            <p> Hasta donde sabemos,  la contaminación se ha convertido en uno de los desafíos más urgentes y complejos a los que nos enfrentamos. Afecta a todos los rincones del planeta y tiene un impacto significativo en la salud humana, la biodiversidad y el equilibrio de los ecosistemas. A través de esta plataforma, nos comprometemos a informar, educar y movilizar a las personas para que comprendan mejor la naturaleza de la contaminación y sus consecuencias, así como las acciones que podemos tomar para mitigar sus efectos. <br> 
+        <h4 class="texto">
+            <p> La contaminación se ha convertido en uno de los desafíos más urgentes y complejos a los que nos enfrentamos. 
+                </p>
+                <p>
+                Afecta a todos los rincones del planeta y tiene un impacto significativo en la salud humana, la biodiversidad y el equilibrio de los ecosistemas. A través de esta plataforma, nos comprometemos a informar, educar y movilizar a las personas para que comprendan mejor la naturaleza de la contaminación y sus consecuencias, así como las acciones que podemos tomar para mitigar sus efectos. <br> 
+                </p>
+                <p>
                 Aquí, encontrarás información sobre los diversos tipos de contaminación, incluyendo la del aire, agua y suelo. Exploraremos las causas principales de estos problemas, sus efectos devastadores, y las innovaciones y políticas que están siendo implementadas para combatirlos. <br>
-                Nuestro objetivo es crear conciencia y proporcionar herramientas para que cada uno de nosotros pueda contribuir a un futuro más limpio y saludable. Únete a nosotros en este viaje hacia la sostenibilidad y la preservación de nuestro planeta. Juntos, podemos hacer la diferencia.</p>
+                </p>
+                <p>
+                Nuestro objetivo es crear conciencia y proporcionar herramientas para que cada uno de nosotros pueda contribuir a un futuro más limpio y saludable. Únete a nosotros en este viaje hacia la sostenibilidad y la preservación de nuestro planeta. Juntos, podemos hacer la diferencia.</p></p>
         </h4>
        </div>
         <!--acá empezamos con el tema de lo q pasa en el mundo (datos reales, algún link de algun noticia x ahí, videos, imágenes); abarcamos el tema de la CONTAMINACIÓN-->
        <div>
           <h3 class="subtitulo">¿Qué deberíamos hacer para mejorar nuestra situación?</h3>
-          <h4>
+          <h4 class="texto">
               <p>Te invitamos a participar en nuestros proyectos de sostenibilidad y acción ciudadana. Estas iniciativas están diseñadas para que cada individuo pueda aportar su granito de arena y ser parte de un movimiento global para combatir la contaminación y proteger nuestro planeta. <br>
               No importa cuán grande o pequeña sea tu contribución, cada acción cuenta y suma hacia un cambio positivo. Al unirte a nuestras iniciativas, no solo estarás ayudando a mejorar el medio ambiente, sino que también tendrás la oportunidad de aprender, crecer y conectarte con personas que comparten tu pasión por la sostenibilidad. Creemos que juntos podemos lograr un impacto significativo y duradero. <br>
               Explora nuestros proyectos y descubre cómo puedes involucrarte. ¡Sé parte de la solución y ayuda a construir un futuro más verde y sostenible para todos!
@@ -105,3 +112,4 @@
     </main>
 </body>
 </html>
+
